// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CitationCounts renders  component with a mock record metrics 1`] = `
<div
  className="citationCounts"
>
  <span
    className="citationCount"
  >
    <img
      alt="Altmetric"
      className="citationCountIcon"
      data-for="claimTooltips"
      data-tip="Altmetric score"
      src=""
      title="Altmetric score"
    />
    <span
      className="citationCountNumber"
    >
      1
    </span>
  </span>
</div>
`;

exports[`CitationCounts renders  component with all metrics 1`] = `
<div
  className="citationCounts"
>
  <span
    className="citationCount"
  >
    <img
      alt="Thomson Routers"
      className="citationCountIcon"
      data-place="bottom"
      data-tip="Thomson Routers Web of Science citation count"
      src=""
      title="Thomson Routers Web of Science citation count"
    />
    <span
      className="citationCountNumber"
    >
      1
    </span>
  </span>
  <span
    className="citationCount"
  >
    <img
      alt="Scopus"
      className="citationCountIcon"
      data-for="claimTooltips"
      data-tip="Scopus citation count"
      src=""
      title="Scopus citation count"
    />
    <span
      className="citationCountNumber"
    >
      1
    </span>
  </span>
  <span
    className="citationCount"
  >
    <img
      alt="Google Scholar"
      className="citationCountIcon"
      data-for="claimTooltips"
      data-tip="Google Scholar citation count"
      src=""
      title="Google Scholar citation count"
    />
    <span
      className="citationCountNumber"
    >
      1
    </span>
  </span>
  <span
    className="citationCount"
  >
    <img
      alt="Altmetric"
      className="citationCountIcon"
      data-for="claimTooltips"
      data-tip="Altmetric score"
      src=""
      title="Altmetric score"
    />
    <span
      className="citationCountNumber"
    >
      1
    </span>
  </span>
  <span
    className="citationCount"
  >
    <FontIcon
      className="material-icons citationCountIcon"
      data-for="claimTooltips"
      data-place="bottom"
      data-tip="Downloads"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      title="Downloads"
    >
      file_download
    </FontIcon>
    <span
      className="citationCountNumber"
    >
      1
    </span>
  </span>
</div>
`;

exports[`CitationCounts renders  component with no metrics 1`] = `
<div
  className="citationCounts"
/>
`;
